--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: codingCoffee
+title: Ameya Shenoy
 email: shenoy.ameya@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A site made using jekyll, hosted using github pages.
   The purpose of this site has not been decided yet!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: shenoy_L
+twitter_username: coding_caffeine
 github_username:  codingCoffee
 
 # Build settings
